Fixed Poetry page italics spacing

--- a/poetry.css
+++ b/poetry.css
@@ -18,7 +18,7 @@
 .slide
 {
     display: none;
-    padding: 1rem 2rem;
+    padding: 1rem 2rem 2rem 2rem;
     margin: 0 4rem;
 }
 
@@ -33,6 +33,8 @@
 {
     font-size: medium;
     display: block;
+    padding: 0.5rem 0.25rem 1rem 0.25rem;
+    text-align: center;
 }
 
 @media screen and (max-width: 700px)
